[project]
name = "cartographer-randomized-test-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
